# efs-pinecan

./: .gitignore  .gitmodules  BuildConfigs.json  README.md  pinecan.code-workspace
.github/workflows/: build.yml
dsdl/: CMakeLists.txt  Makefile
pinecan/: CMakeLists.txt  TODO.md  dynamic_node_allocatee.c  dynamic_node_allocatee.h  pinecan.c  pinecan.h  pinecan_internals.h
pinecan/boards/stm32l4/: pinecanBoard.c  pinecanBoard.h
pinecan/bootloader/L433RC/Rev1/: .cproject  CMakeLists.txt  L433RC.ioc  STM32L433XX123456789_FLASH.ld  STM32L433XX_FLASH.ld
pinecan/bootloader/board_specific/stm32l4/: STM32L433XX_FLASH.ld  STM32L433XX_FLASH.ld.in  bootloader_l4.c  bootloader_l4.h  memory.cmake
pinecan/common/: pinecanCommon.c  pinecanCommon.h  pinecanCommon_internals.h
targets/L433RC/Rev1/: .mxproject  .project  CMakeLists.txt
targets/LED_4/: .mxproject  CMakeLists.txt  LED_4.ioc  STM32L433XX_FLASH.ld
targets/LED_4/Core/Inc/: main.h
targets/LED_Bootloader_Test2/: CMakeLists.txt  CMakePresets.json
targets/LED_Bootloader_Test2/cmake/: vscode_generated.cmake
targets/LED_Bootloader_Test3/: .mxproject  LED_Bootloader_Test3.ioc
targets/LED_Bootloader_Test3/EWARM/: LED_Bootloader_Test3.ewd  LED_Bootloader_Test3.ewp  Project.eww
targets/LED_Bootloader_Upload/: .cproject  .mxproject  .project  CMakeLists.txt  LED_Bootloader_Upload.ioc  STM32L433RCTXP_FLASH.ld
targets/LED_Bootloader_Upload/Debug/: LED_Bootloader_Upload.elf  LED_Bootloader_Upload.list  LED_Bootloader_Upload.map  makefile  objects.list
targets/single_servo_driver/rev1/: CMakeLists.txt  README.md
(+248 files in other folders)
